<resources>
    <string name="app_name">bettersleep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="sounds">Sounds</string>
    <string name="sleep">Sleep</string>
    <string name="journal">Journal</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="chipfilter1">chipfilter1</string>
    <string name="all">All</string>
    <string name="popular">popular</string>
    <string name="favourite">Favourite</string>
    <string name="new_sounds">New Sounds</string>
    <string name="nature">Nature</string>
    <string name="sleeper">Sleeper</string>
    <string name="_08_00">08:00</string>
</resources>