<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/menu_sounds"
        android:enabled="true"
        android:icon="@drawable/ic_videolib"
        android:title="@string/sounds"/>
    <item
        android:id="@+id/menu_sleep"
        android:enabled="true"
        android:icon="@drawable/ic_subcript"
        android:title="@string/sleep"/>
    <item
        android:id="@+id/menu_journal"
        android:enabled="true"
        android:icon="@drawable/ic_videolib"
        android:title="@string/journal"/>
    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/profile"/>
</menu>